# tflite-micro-for-esp32c3

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  generate_tflm.sh
main/: CMakeLists.txt  main.c  main.cpp
tflm-src/: Makefile
tflm-src/tensorflow/lite/micro/testing/: micro_test.h
